crates/vitte-cli/tests/snapshots/cli_syntax__compile_global_option_after_command.snap
---
source: crates/vitte-cli/tests/cli_syntax.rs
expression: "format!(\"status: {status}\\nstdout:\\n{stdout}\\\n            \\n---- stderr ----\\n{stderr}\")"
---
status: 2
stdout:

---- stderr ----
error: unexpected argument '-v' found

  tip: to pass '-v' as a value, use '-- -v'

Usage: vitte compile [OPTIONS] [INPUT]

For more information, try '--help'.
