crates/vitte-cli/tests/snapshots/cli_syntax__compile_invalid_source_parse_error.snap
---
source: crates/vitte-cli/tests/cli_syntax.rs
assertion_line: 27
expression: "format!(\"status: {status}\\nstdout:\\n{stdout}\\\n            \\n---- stderr ----\\n{stderr}\")"
---
status: 1
stdout:

---- stderr ----
[1m[31merror[PARSE001][39m[0m [31mErreur de syntaxe : attendu expected module_decl[39m
[1m[34mnote[39m[0m --> entrée:input:1:1
[1m[34mnote[39m[0m module main {
[1m[34mnote[39m[0m ^
error: échec d'exécution de la commande: error[PARSE001]: Erreur de syntaxe : attendu expected module_decl
