crates/vitte-cli/tests/snapshots/cli_syntax__compile_source_after_options.snap
---
source: crates/vitte-cli/tests/cli_syntax.rs
expression: "format!(\"status: {status}\\nstdout:\\n{stdout}\\\n            \\n---- stderr ----\\n{stderr}\")"
---
status: 1
stdout:

---- stderr ----
error: échec d'exécution de la commande: lecture de la source: ouverture: foo.vitte: No such file or directory (os error 2)
