crates/vitte-cli/tests/snapshots/cli_syntax__fmt_in_place_check_conflict.snap
---
source: crates/vitte-cli/tests/cli_syntax.rs
assertion_line: 28
expression: "format!(\"status: {status}\\nstdout:\\n{stdout}\\\n            \\n---- stderr ----\\n{stderr}\")"
---
status: 1
stdout:

---- stderr ----
error: `--in-place` est incompatible avec `--check`
