crates/vitte-cli/tests/snapshots/cli_syntax__fmt_in_place_output_conflict.snap
---
source: crates/vitte-cli/tests/cli_syntax.rs
assertion_line: 28
expression: "format!(\"status: {status}\\nstdout:\\n{stdout}\\\n            \\n---- stderr ----\\n{stderr}\")"
---
status: 1
stdout:

---- stderr ----
error: les options `--in-place` et `--output` ne peuvent pas être utilisées ensemble
