crates/vitte-cli/tests/snapshots/cli_syntax__help_compile.snap
---
source: crates/vitte-cli/tests/cli_syntax.rs
assertion_line: 24
expression: "format!(\"status: {status}\\nstdout:\\n{stdout}\\\n            \\n---- stderr ----\\n{stderr}\")"
---
status: 0
stdout:
Compiler une source vers un bytecode VITBC

Usage: vitte compile [OPTIONS] [INPUT]

Arguments:
  [INPUT]  Fichier source (ou - pour stdin)

Options:
  -o, --output <OUTPUT>    Fichier de sortie (.vitbc) (stdout si omis et pas --auto)
  -O, --optimize           Optimisations (-O)
      --debug              Émettre des infos de debug
      --mkdir              Créer les dossiers parents si nécessaire
      --profile <PROFILE>  Profil d'environnement (dev ou release) [default: dev] [possible values: dev, release]
      --lang <LANG>        Langue pour les messages utilisateur [possible values: en, fr]
      --overwrite          Écraser le fichier de sortie
      --time               Afficher le temps d'exécution
      --auto               Sortie auto : même nom + .vitbc
  -h, --help               Print help

---- stderr ----
