crates/vitte-cli/tests/snapshots/cli_syntax__help_disasm.snap
---
source: crates/vitte-cli/tests/cli_syntax.rs
assertion_line: 23
expression: "format!(\"status: {status}\\nstdout:\\n{stdout}\\\n            \\n---- stderr ----\\n{stderr}\")"
---
status: 0
stdout:
Désassembler un bytecode vers du texte

Usage: vitte disasm [OPTIONS] [INPUT]

Arguments:
  [INPUT]  Bytecode

Options:
  -o, --output <OUTPUT>  Sortie texte (stdout si omis)
  -h, --help             Print help

---- stderr ----
