crates/vitte-cli/tests/snapshots/cli_syntax__help_fmt.snap
---
source: crates/vitte-cli/tests/cli_syntax.rs
assertion_line: 23
expression: "format!(\"status: {status}\\nstdout:\\n{stdout}\\\n            \\n---- stderr ----\\n{stderr}\")"
---
status: 0
stdout:
Formater une source (lecture fichier ou stdin)

Usage: vitte fmt [OPTIONS] [INPUT]

Arguments:
  [INPUT]  Fichier source (ou - pour stdin)

Options:
  -o, --output <OUTPUT>  Fichier de sortie (stdout si omis) ; --in-place pour réécrire
      --in-place         Réécrire le fichier d'entrée
      --check            Mode vérification uniquement (retourne erreur si diff)
  -h, --help             Print help

---- stderr ----
