crates/vitte-cli/tests/snapshots/cli_syntax__help_inspect.snap
---
source: crates/vitte-cli/tests/cli_syntax.rs
assertion_line: 24
expression: "format!(\"status: {status}\\nstdout:\\n{stdout}\\\n            \\n---- stderr ----\\n{stderr}\")"
---
status: 0
stdout:
Inspecter un artefact VITBC

Usage: vitte inspect [OPTIONS] [INPUT]

Arguments:
  [INPUT]  Bytecode (.vitbc)

Options:
      --summary            Résumé compact
      --symbols            Table des symboles uniquement
      --consts             Constantes globales
      --hexdump            Dump hexadécimal
      --profile <PROFILE>  Profil d'environnement (dev ou release) [default: dev] [possible values: dev, release]
      --json               Sortie JSON
      --lang <LANG>        Langue pour les messages utilisateur [possible values: en, fr]
      --target             Informations cible
      --header             Informations d'en-tête
      --sections           Liste des sections
      --strings            Chaînes ASCII embarquées
      --imports            Fonctions importées
      --exports            Fonctions exportées
      --disasm             Désassemblage textuel
      --debug              Informations de debug
      --meta               Métadonnées additionnelles
      --verify             Vérification d'intégrité
      --size               Taille par section
      --deps               Dépendances embarquées
      --entry              Point d'entrée
      --dump-all           Active toutes les sections
  -h, --help               Print help

---- stderr ----
