crates/vitte-cli/tests/snapshots/cli_syntax__help_main.snap
---
source: crates/vitte-cli/tests/cli_syntax.rs
assertion_line: 24
expression: "format!(\"status: {status}\\nstdout:\\n{stdout}\\\n            \\n---- stderr ----\\n{stderr}\")"
---
status: 0
stdout:
Vitte CLI — compiler, exécuter, formater, inspecter VITBC

Usage: vitte [OPTIONS] <COMMAND>

Commands:
  compile  Compiler une source vers un bytecode VITBC
  run      Exécuter un bytecode (ou compiler puis exécuter avec --auto-compile)
  server   Lancer le serveur JSON-RPC
  repl     Lancer un REPL (si fourni par les hooks)
  doctor   Diagnostiquer l'environnement (toolchain, cache, modules)
  fmt      Formater une source (lecture fichier ou stdin)
  inspect  Inspecter un artefact VITBC
  disasm   Désassembler un bytecode vers du texte
  modules  Lister les modules compilés depuis `vitte-modules`
  help     Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose...         Augmente la verbosité (-v, -vv, -vvv)
  -q, --quiet              Mode silencieux (casse la verbosité)
      --color <COLOR>      Force la couleur (si la feature `color` est compilée) [default: auto] [possible values: auto, always, never]
      --profile <PROFILE>  Profil d'environnement (dev ou release) [default: dev] [possible values: dev, release]
      --lang <LANG>        Langue pour les messages utilisateur [possible values: en, fr]
  -h, --help               Print help
  -V, --version            Print version

---- stderr ----
