crates/vitte-cli/tests/snapshots/cli_syntax__help_modules.snap
---
source: crates/vitte-cli/tests/cli_syntax.rs
assertion_line: 24
expression: "format!(\"status: {status}\\nstdout:\\n{stdout}\\\n            \\n---- stderr ----\\n{stderr}\")"
---
status: 0
stdout:
Lister les modules compilés depuis `vitte-modules`

Usage: vitte modules [OPTIONS]

Options:
      --json               Sortie JSON (pretty-printed) au lieu du tableau texte
      --trace-registry     Trace le registre local (chemin, taille, timing)
      --profile <PROFILE>  Profil d'environnement (dev ou release) [default: dev] [possible values: dev, release]
      --lang <LANG>        Langue pour les messages utilisateur [possible values: en, fr]
  -h, --help               Print help

---- stderr ----
